# Data_eng

./: pyproject.toml
Apache_beam/: create_pipeline.py  formal-grammar-407607-97b29afb27d0.json
Apache_beam/old_and_experiments/: ACTUAL.py  dataflow_costs.py  dataflow_events.py  dataflow_intalls.py  dataflow_old.py  dataflow_orders.py
Cloud_funcs/: README.md
Cloud_funcs/dataflow_pipeline/: main.py  table_schemas.py
Cloud_funcs/save_to_gcp/: requirements.txt  upload_to_gcp.py
GCs_lib/: create_bucket.py  formal-grammar-407607-97b29afb27d0.json  save_to_gcs.py
GCs_lib/downloaded_data/: costs.json  installs.json  orders.json
